package com.domoticore.iam.domain.model.queries;

public record GetUserByIdQuery(Long userId) {
}
