@startuml
skinparam packageStyle rectangle

package "shared" {
  package "domain.model" {
    class Result
    class ApiError
  }
  package "application" {
    class JsonResourceService
  }
  package "infrastructure" {
    class JsonResourceRepository
    class SnakeCasePhysicalNamingStrategy
    class SecurityConfig
  }
  package "presentation" {
    class GlobalExceptionHandler
    class AbstractJsonCollectionController
  }
}

package "iam" {
  package "domain.model" {
    class User <<Aggregate>>
    class Email <<ValueObject>>
    class RegisterUserCommand
    class LoginUserCommand
    class GetUserByIdQuery
  }
  package "application" {
    interface UserCommandService
    interface UserQueryService
    class UserCommandServiceImpl
    class UserQueryServiceImpl
  }
  package "infrastructure" {
    class UserRepository
    class UserResponseAssembler
    class LoginRequest
  }
  package "presentation" {
    class AuthController
    class UserController
  }
}

UserCommandService <|.. UserCommandServiceImpl
UserQueryService <|.. UserQueryServiceImpl
UserCommandServiceImpl --> UserRepository
UserQueryServiceImpl --> UserRepository
AuthController --> UserCommandService
UserController --> UserCommandService
UserController --> UserQueryService
User --> Email
@enduml
